crates/uitest/fixtures/ty/def/trait_impl_assoc_const_assoc_type_bindings.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/trait_impl_assoc_const_assoc_type_bindings.fe
---
error[3-0011]: given type doesn't match the expected const type
   ┌─ trait_impl_assoc_const_assoc_type_bindings.fe:26:59
   │
26 │ fn use_bound_const_in_type<T: BoundConst<X = u32>>(_slot: ConstSlot<{ T::C }>) {}
   │                                                           ^^^^^^^^^^^^^^^^^^^ expected `u32` type here, but `T::X` is given
